@@ -1,3 +1,10 @@
+2005-05-23  Andrew Cagney  <cagney@gnu.org>
+
+	* auxv.h (target_auxv_read, procfs_xfer_auxv)
+	(target_auxv_parse): Use gdb_byte for byte buffer parameters.
+	* auxv.c (target_auxv_read, procfs_xfer_auxv, target_auxv_parse) 
+	(target_auxv_search, fprint_target_auxv): Update.
+
 2005-05-23  Orjan Friberg  <orjanf@axis.com>
 
 	* cris-tdep.c: Tweak values for cris-mode.
